fixed spacing of service cards from border box

--- a/react-app/src/components/AllServices/allServices.css
+++ b/react-app/src/components/AllServices/allServices.css
@@ -24,7 +24,7 @@
     padding-top: 3%;
     border: 1px solid #e4e5e7;
     border-radius: 2%;
-    padding-left: 2%;
+    /* padding-left: 2%; */
     /* justify-content: space-evenly;, */
 }
 
@@ -38,6 +38,7 @@
     flex: 0 0 auto;
     margin-right: 20px;
     padding-bottom: 12%;
+    padding-left: 3%;
     font: 400 16px/24px "Macan","Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
